button spacing issue on mobile devices fixed by adding a container div

--- a/docs/scss/components/_form-elements.scss
+++ b/docs/scss/components/_form-elements.scss
@@ -159,6 +159,10 @@
         margin: 0 0 1rem;
         color: map-get($brand-colours,danger);
     }
+
+    &-btn-group .btn{
+        margin-top: 1rem;
+    }
 }
 span.form-control--error{
     color: map-get($brand-colours, danger); 
@@ -177,7 +181,6 @@ span.form-control--error{
     padding: 0.7rem 2rem 0.5rem;
     border-radius: $btn-border-radius;
     border-width: 2px;
-    margin-top: 1rem;
 
     &-primary{
        background-color: map-get($brand-colours,brandPurple);
